@@ -63,6 +63,10 @@ Other changes:
 
 * Allow <mapper refid> to refer directly to a FileNameMapper instance.
 
+* If you try and use a type in a namespace (or an antlib), and the type is not
+  recognized but there are other definitions in that namespace, Ant lists what
+  the known definitions are. This helps you find spelling errors. 
+
 Changes from Ant 1.6.5 to Ant 1.7.0
 ===================================
 
